--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>الحاسبة السريعة</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="manifest" href="manifest.json" />
-  <link rel="icon" href="icon.png" type="image/png" />
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+
+  <!-- Favicon for 32x32 -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/calc32.png">
+
+  <!-- Favicon for 16x16 -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/calc16.png">
+
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <div class="calculator">
