--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>الحاسبة السريعة</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="/icons/calc16.png" type="image/png">
   <!-- Apple Touch Icon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
 
