--- a/index.html
+++ b/index.html
@@ -49,5 +49,18 @@
   </div>
 
   <script src="script.js"></script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/sw.js')
+        .then((registration) => {
+          console.log('Service Worker مسجل بنجاح:', registration.scope);
+        })
+        .catch((error) => {
+          console.log('فشل تسجيل Service Worker:', error);
+        });
+    });
+  }
+</script>
 </body>
 </html>
