--- a/index.html
+++ b/index.html
@@ -1,44 +1,62 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>الحاسبة السريعة</title>
+  <title>Pro Calculator</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="shortcut icon" href="/icons/calc16.png" type="image/png">
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="/icons/calc16.png" type="image/png" />
+  <link rel="shortcut icon" href="/icons/calc512.png" type="image/png">
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/icons/calc32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/icons/calc16.png">
-  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <div class="calculator">
-    <input type="text" id="result" disabled placeholder="0" />
-    <div id="history">
-      <h4>السجل</h4>
+  <!-- Language Toggle -->
+  <div class="lang-toggle">
+    <button id="lang-btn" onclick="toggleLang()">عربي</button>
+  </div>
+
+  <div class="container">
+    <!-- History Panel (Left on desktop) -->
+    <div class="history-panel" id="history-panel">
+      <div class="history-header">
+        <h4 id="history-title">History</h4>
+        <span class="arrow" id="arrow">▼</span>
+      </div>
       <ul id="history-list"></ul>
-      <button id="clear-history">مسح السجل</button>
+      <button id="clear-history">Clear All</button>
     </div>
-    <div class="buttons">
-      <button onclick="clearDisplay()">C</button>
-      <button onclick="appendValue('/')">÷</button>
-      <button onclick="appendValue('*')">×</button>
-      <button onclick="appendValue('-')">−</button>
-      <button onclick="appendValue('+')">+</button>
-      <button onclick="appendValue('%')">%</button>
-      <button onclick="appendValue('.')">.</button>
-      <button onclick="deleteChar()">⌫</button>
-      <button onclick="appendValue('7')">7</button>
-      <button onclick="appendValue('8')">8</button>
-      <button onclick="appendValue('9')">9</button>
-      <button onclick="appendValue('4')">4</button>
-      <button onclick="appendValue('5')">5</button>
-      <button onclick="appendValue('6')">6</button>
-      <button onclick="appendValue('1')">1</button>
-      <button onclick="appendValue('2')">2</button>
-      <button onclick="appendValue('3')">3</button>
-      <button onclick="appendValue('0')" class="zero">0</button>
-      <button onclick="calculate()" class="equals">=</button>
+
+    <!-- Calculator -->
+    <div class="calculator" id="calculator">
+      <input type="text" id="result" disabled placeholder="0" />
+
+      <div class="buttons">
+        <button class="btn circle" onclick="clearDisplay()">C</button>
+        <button class="btn circle op" onclick="appendValue('/')">÷</button>
+        <button class="btn circle op" onclick="appendValue('*')">×</button>
+        <button class="btn circle op" onclick="deleteChar()">⌫</button>
+
+        <button class="btn circle" onclick="appendValue('7')">7</button>
+        <button class="btn circle" onclick="appendValue('8')">8</button>
+        <button class="btn circle" onclick="appendValue('9')">9</button>
+        <button class="btn circle op" onclick="appendValue('-')">−</button>
+
+        <button class="btn circle" onclick="appendValue('4')">4</button>
+        <button class="btn circle" onclick="appendValue('5')">5</button>
+        <button class="btn circle" onclick="appendValue('6')">6</button>
+        <button class="btn circle op" onclick="appendValue('+')">+</button>
+
+        <button class="btn circle" onclick="appendValue('1')">1</button>
+        <button class="btn circle" onclick="appendValue('2')">2</button>
+        <button class="btn circle" onclick="appendValue('3')">3</button>
+        <button class="btn circle equals" onclick="calculate()">=</button>
+
+        <button class="btn circle zero" onclick="appendValue('0')">0</button>
+        <button class="btn circle" onclick="appendValue('.')">.</button>
+        <button class="btn circle" onclick="appendValue('%')">%</button>
+      </div>
     </div>
   </div>
 
@@ -47,8 +65,8 @@
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('/sw.js')
-          .then(reg => console.log('SW مسجل:', reg.scope))
-          .catch(err => console.log('فشل:', err));
+          .then(reg => console.log('SW Registered'))
+          .catch(err => console.error('SW Failed:', err));
       });
     }
   </script>
