--- a/index.html
+++ b/index.html
@@ -4,54 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pro Calculator</title>
-<link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="/icons/calc16.png" type="image/png">
-    <link rel="shortcut icon" href="/icons/calc512.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/calc32.png">
-    <meta name="theme-color" content="#1a1a1a">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="/icons/calc16.png" type="image/png" />
+  <link rel="shortcut icon" href="/icons/calc512.png" type="image/png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/calc32.png">
 </head>
 <body>
-    <div class="main-container">
-        <div class="calculator-container">
-            <div class="calculator" id="calculator">
-                <div class="display-container">
-                    <div class="expression" id="expression"></div>
-                    <input type="text" id="result" readonly placeholder="0">
-                </div>
-
-                <div class="buttons-grid">
-                    <button class="btn function-btn" data-action="clearAll">AC</button>
-                    <button class="btn function-btn" data-action="clearEntry">CE</button>
-                    <button class="btn function-btn" data-op="%">%</button>
-                    <button class="btn operator-btn" data-op="/">÷</button>
-
-                    <button class="btn number-btn" data-val="7">7</button>
-                    <button class="btn number-btn" data-val="8">8</button>
-                    <button class="btn number-btn" data-val="9">9</button>
-                    <button class="btn operator-btn" data-op="*">×</button>
-
-                    <button class="btn number-btn" data-val="4">4</button>
-                    <button class="btn number-btn" data-val="5">5</button>
-                    <button class="btn number-btn" data-val="6">6</button>
-                    <button class="btn operator-btn" data-op="-">−</button>
-
-                    <button class="btn number-btn" data-val="1">1</button>
-                    <button class="btn number-btn" data-val="2">2</button>
-                    <button class="btn number-btn" data-val="3">3</button>
-                    <button class="btn operator-btn plus-btn" data-op="+">+</button>
-
-                    <button class="btn number-btn zero-btn" data-val="0">0</button>
-                    <button class="btn function-btn" data-val=".">.</button>
-                    <button class="btn function-btn" data-action="delete">⌫</button>
-                    <button class="btn equals-btn" data-action="calculate">=</button>
-                </div>
-            </div>
-        </div>
-        
+    <div class="app-container">
+        <!-- Desktop layout: history left, calculator right -->
         <div class="history-panel" id="history-panel">
             <div class="history-header">
                 <h4>History</h4>
@@ -62,9 +24,42 @@
                 <button id="clear-history" class="clear-btn">Clear All</button>
             </div>
         </div>
+
+        <div class="calculator" id="calculator">
+            <div class="display-container">
+                <div class="expression" id="expression"></div>
+                <input type="text" id="result" readonly placeholder="0">
+            </div>
+
+            <div class="buttons-grid">
+                <button class="btn function-btn" data-action="clearAll">AC</button>
+                <button class="btn function-btn" data-action="clearEntry">CE</button>
+                <button class="btn function-btn" data-op="%">%</button>
+                <button class="btn operator-btn" data-op="/">÷</button>
+
+                <button class="btn number-btn" data-val="7">7</button>
+                <button class="btn number-btn" data-val="8">8</button>
+                <button class="btn number-btn" data-val="9">9</button>
+                <button class="btn operator-btn" data-op="*">×</button>
+
+                <button class="btn number-btn" data-val="4">4</button>
+                <button class="btn number-btn" data-val="5">5</button>
+                <button class="btn number-btn" data-val="6">6</button>
+                <button class="btn operator-btn" data-op="-">−</button>
+
+                <button class="btn number-btn" data-val="1">1</button>
+                <button class="btn number-btn" data-val="2">2</button>
+                <button class="btn number-btn" data-val="3">3</button>
+                <button class="btn operator-btn" data-op="+">+</button>
+
+                <button class="btn number-btn zero-btn" data-val="0">0</button>
+                <button class="btn function-btn" data-val=".">.</button>
+                <button class="btn function-btn" data-action="delete">⌫</button>
+                <button class="btn equals-btn" data-action="calculate">=</button>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
-    <script src="app.js"></script>
 </body>
 </html>
