--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Pro Calculator</title>
-<link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pro Calculator 3D</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="/icons/calc16.png" type="image/png">
     <link rel="shortcut icon" href="/icons/calc512.png" type="image/png">
@@ -15,48 +15,83 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
-    <div class="app-container">
-        <!-- History Panel (Left on desktop, top on mobile) -->
-        <div class="history-panel" id="history-panel">
-            <div class="history-header">
-                <h4>History</h4>
-            </div>
-            <ul id="history-list"></ul>
-            <button id="clear-history" class="clear-btn">Clear All</button>
+    <!-- 3D Background -->
+    <div class="bg-3d">
+        <div class="floating-shapes">
+            <div class="shape shape-1"></div>
+            <div class="shape shape-2"></div>
+            <div class="shape shape-3"></div>
+            <div class="shape shape-4"></div>
+            <div class="shape shape-5"></div>
         </div>
+        <div class="grid-overlay"></div>
+    </div>
 
-        <!-- Calculator (Right on desktop, bottom on mobile) -->
+    <!-- Calculator Container -->
+    <div class="calculator-container">
+        <!-- Main Calculator -->
         <div class="calculator" id="calculator">
+            <!-- Display -->
             <div class="display-container">
                 <div class="expression" id="expression"></div>
                 <input type="text" id="result" readonly placeholder="0">
             </div>
 
+            <!-- Scientific Mode Buttons (Always Active) -->
+            <div class="mode-buttons active" id="scientific-buttons">
+                <button class="btn sci-btn" onclick="appendFunction('sin(')">sin</button>
+                <button class="btn sci-btn" onclick="appendFunction('cos(')">cos</button>
+                <button class="btn sci-btn" onclick="appendFunction('tan(')">tan</button>
+                <button class="btn sci-btn" onclick="appendFunction('log(')">log</button>
+                <button class="btn sci-btn" onclick="appendValue('π')">π</button>
+                <button class="btn sci-btn" onclick="appendValue('e')">e</button>
+                <button class="btn sci-btn" onclick="appendFunction('√(')">√</button>
+                <button class="btn sci-btn" onclick="appendValue('^')">x^y</button>
+            </div>
+
+            <!-- Main Buttons Grid -->
             <div class="buttons-grid">
-                <button class="btn function-btn" data-action="clearAll">AC</button>
-                <button class="btn function-btn" data-action="clearEntry">CE</button>
-                <button class="btn function-btn" data-op="%">%</button>
-                <button class="btn operator-btn" data-op="/">÷</button>
+                <!-- Row 1 -->
+                <button class="btn clear-btn" onclick="clearAll()">AC</button>
+                <button class="btn clear-btn" onclick="clearEntry()">CE</button>
+                <button class="btn function-btn" onclick="percentage()">%</button>
+                <button class="btn operator-btn" onclick="appendOperator('/')">÷</button>
 
-                <button class="btn number-btn" data-val="7">7</button>
-                <button class="btn number-btn" data-val="8">8</button>
-                <button class="btn number-btn" data-val="9">9</button>
-                <button class="btn operator-btn" data-op="*">×</button>
+                <!-- Row 2 -->
+                <button class="btn number-btn" onclick="appendValue('7')">7</button>
+                <button class="btn number-btn" onclick="appendValue('8')">8</button>
+                <button class="btn number-btn" onclick="appendValue('9')">9</button>
+                <button class="btn operator-btn" onclick="appendOperator('*')">×</button>
 
-                <button class="btn number-btn" data-val="4">4</button>
-                <button class="btn number-btn" data-val="5">5</button>
-                <button class="btn number-btn" data-val="6">6</button>
-                <button class="btn operator-btn" data-op="-">−</button>
+                <!-- Row 3 -->
+                <button class="btn number-btn" onclick="appendValue('4')">4</button>
+                <button class="btn number-btn" onclick="appendValue('5')">5</button>
+                <button class="btn number-btn" onclick="appendValue('6')">6</button>
+                <button class="btn operator-btn" onclick="appendOperator('-')">−</button>
 
-                <button class="btn number-btn" data-val="1">1</button>
-                <button class="btn number-btn" data-val="2">2</button>
-                <button class="btn number-btn" data-val="3">3</button>
-                <button class="btn operator-btn" data-op="+">+</button>
+                <!-- Row 4 -->
+                <button class="btn number-btn" onclick="appendValue('1')">1</button>
+                <button class="btn number-btn" onclick="appendValue('2')">2</button>
+                <button class="btn number-btn" onclick="appendValue('3')">3</button>
+                <button class="btn operator-btn" onclick="appendOperator('+')">+</button>
 
-                <button class="btn number-btn zero-btn" data-val="0">0</button>
-                <button class="btn function-btn" data-val=".">.</button>
-                <button class="btn function-btn" data-action="delete">⌫</button>
-                <button class="btn equals-btn" data-action="calculate">=</button>
+                <!-- Row 5 -->
+                <button class="btn number-btn" onclick="appendValue('0')">0</button>
+                <button class="btn function-btn" onclick="appendValue('.')">.</button>
+                <button class="btn function-btn" onclick="deleteChar()">⌫</button>
+                <button class="btn equals-btn" onclick="calculate()">=</button>
+            </div>
+        </div>
+        
+        <!-- History Panel - MOVED TO BOTTOM FOR MOBILE -->
+        <div class="history-panel" id="history-panel">
+            <div class="history-header">
+                <h4 id="history-title">History</h4>
+                <button class="collapse-btn" id="collapse-btn">▼</button>
+            </div>
+            <div class="history-content">
+                <ul id="history-list"></ul>
+                <button id="clear-history" class="clear-btn">Clear All</button>
             </div>
         </div>
     </div>
