--- a/calculator-html.html
+++ b/calculator-html.html
@@ -106,15 +106,6 @@
     </div>
 
     <script src="script.js"></script>
-    <script>
-        // Service Worker Registration
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
-                    .then(reg => console.log('SW Registered:', reg))
-                    .catch(err => console.error('SW Registration Failed:', err));
-            });
-        }
-    </script>
+    <script src="app.js"></script>
 </body>
 </html>
