--- a/z/index.html
+++ b/z/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تطبيق الصور الرياضية</title>
-    <link rel="stylesheet" href="/z/styles.css">
+    <link rel="stylesheet" href="/z/style.css">
     <link rel="manifest" href="/z/manifest.json">
     <meta name="theme-color" content="#1a73e8">
 </head>
